--- a/index.html
+++ b/index.html
@@ -1,35 +1,15 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-	<title>Starbuzz Coffee</title>
-	<style>
-		body {
-			background-color: #d2b48c;
-			margin-left: 20%;
-			margin-right: 20%;
-			border: 2px dotted black;
-			padding: 10px 10px 10px 10px;
-			font-family: sans-serif;
-		}	
-	</style>
+    <meta charset="utf-8">
+	<title>Sample website</title>
 </head>
-
 <body>
-	<h1>Starbuzz Coffee Beverages</h1>
-
-	<h6>WHAT A HEADING!>??YOHOHO</h6>
-
-	<h2>House Blend, $1.49</h2>
-	<p>A smooth, mild blend of coffees from Mexico, Bolivia and Guatemala.</p>
-
-	<h2>Mocha Caffe Latte, $2.35</h2>
-	<p>Espresso, steamed milk and chocolate syrup.</p>
-
-	<h2>Cappuccino, $1.89</h2>
-	<p>A mixture of espresso, steamed milk and milk foam.</p>
-
-	<h2>Chai Tea, $1.85</h2>
-	<p>A spicy drink made with black tea, spices, milk and honey.</p>
+    <iframe width="854" height="480" src="https://www.youtube.com/embed/PEEXZZ071FE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <canvas id="smlRectangle" height="100"
+            width="200"></canvas>
 </body>
 </html>
+
 
 
