--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
-	<title>Sample website</title>
+	<title>Simple Atelier site</title>
 </head>
+
 <body>
-    <iframe width="854" height="480" src="https://www.youtube.com/embed/PEEXZZ071FE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    <canvas id="smlRectangle" height="100"
-            width="200"></canvas>
+
+
 </body>
+
 </html>
 
 
