--- a/form.html
+++ b/form.html
@@ -4,14 +4,16 @@
 <head>
 	<meta charset="utf-8">
 	<title>Form</title>
+    <link rel="stylesheet" href="css/form.css" type="text/css">
 </head>
 
-<body>
+<body id="body_form">
 <div id="test_form">
   <form id= "MFTF"  method= "post"> <!--MFTF = My first test form -->
 
-    <fieldset>
-		<legend>Test Form</legend>
+    <fieldset id="fieldset_style">
+		<legend id="legend_style">Test Form</legend>
+        <div class="input_form">
 		<label> Name</label>
         <input type ="text"
                name = "name"
@@ -21,9 +23,8 @@
                pattern="[A-Z][a-z]{1,19}"
                title="Write the name with a capital letter and no more than 20 characters"
                autofocus/>
-    </fieldset>
+        </div>
 <!--Якщо закоментувати 2 нижні <fieldset> то перший починає реагувати і виконувати атрибути -->
-	<fieldset>
 		<label for ="email"> Email</label>
        <input type="email"
               name="Email"
@@ -32,9 +33,6 @@
               pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,3}$"
               title="Writh correct email please"
               required/> <!--Довільні Англ літ. та символи від 0-9 знак "@" знову довільий текс "." 2-3 літери-->
-    </fieldset>
-
-	<fieldset>
 		<label for ="age"> Age</label>
 		<input type="number"
                name ="age" id="age"
@@ -43,7 +41,8 @@
                min="1"
                required>
 		<!-- or "pattern="\d{1,9}\d{0,9}\d{0}""-->
-      </fieldset>
+	  <input type="submit">
+    </fieldset>
   </form>
 </div>
 </body>
