--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
 <head>
     <meta charset="utf-8">
 	<title>Simple Atelier site</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 
 <body>
+
+<header>
+    <div class="logo">
+        <a href="index.html">
+            <img class="logo" src="Images/logo.png" alt="Logo">
+        </a>
+    </div>
+    <div class="navigation">
+
+    </div>
+</header>
 
 
 </body>
